# sound-groove-model

./: .gitignore  CONTRIBUTING.md  README.md  Readme_ch.md  compare_two_wavs.py  finetune.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  train.py  verify.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
configs/: experiment.yaml  finetune.yaml  train.yaml
dataset/: staticdataset.py
demos/: app.py  real_time.py  realtime_diarization_test.py  realtime_monitor.py
docs/: data_guide.md  finetuning.md
docs/specs/: checkpoint-schema.md  data-schema.md
examples/: README.md  long_audio_monitoring.py  meeting_analysis.py  pretrained_inference_example.py  streaming_inference.py
processed/: add_single_sample.py  aug_data.py  augment_add_negative_processed.py  build_processed_dataset.py  process_mixspk.py  simulate_multispeaker.py
scripts/: eval_diarization.py  export.py  infer_chunk.py  prepare_mix_eval.py  verif.py
scripts/eval/: export_rttm.py  score_diarization.py
speaker_verification/: __init__.py  checkpointing.py  factory.py  infer_chunk.py  inference.py  logging_utils.py
speaker_verification/audio/: features.py
speaker_verification/dataset/: manifest_builder.py  static_dataset.py
speaker_verification/engine/: checkpoint.py  evaluator.py  trainer.py
speaker_verification/interfaces/: diar_interface.py  global_tracker.py
speaker_verification/loss/: aamsoftmax.py  diar_pit.py  existence_loss.py  (+4 more)
tests/: conftest.py  test_config.py  test_dataset.py  test_dataset_.py  test_infer_interface.py  test_loss.py  test_model_forward.py  test_speaker_bank.py  test_tracker.py
utils/: matching.py  meters.py  plot.py  utils.py
(+18 files in other folders)
