[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speaker-verification"
version = "0.1.3"
description = "Speaker-aware diarization and verification toolkit built with PyTorch."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "zhangzijie" },
]
keywords = [
  "speaker-verification",
  "speaker-diarization",
  "voice-ai",
  "pytorch",
  "audio",
]
dependencies = [
  "torch",
  "torchaudio",
  "numpy",
  "scikit-learn",
  "matplotlib",
  "tqdm",
  "hydra-core",
  "omegaconf",
  "wandb",
  "onnxruntime",
  "PyWavelets",
  "scipy",
  "sounddevice",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "black",
  "isort",
  "mypy",
]

[tool.setuptools.packages.find]
include = ["speaker_verification*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
  "-q",
  "--cov=speaker_verification",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--cov-fail-under=75",
]

[tool.coverage.run]
branch = true
source = ["speaker_verification"]

[tool.coverage.report]
skip_covered = false
show_missing = true
omit = [
  "speaker_verification/__init__.py",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
namespace_packages = true
